[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jacktrade"
version = "0.0.1"
authors = [
  { name="Mario Zaja", email="mzaja0@gmail.com" },
]
description = "A collection of commonly used Python utilities."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["utils", "utilities"]

[project.urls]
"Homepage" = "https://github.com/mzaja/jacktrade"
"Bug Tracker" = "https://github.com/mzaja/jacktrade/issues"