[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jacktrade"]

[project]
name = "jacktrade"
version = "0.5.0"
authors = [
  { name="Mario Zaja", email="mzaja0@gmail.com" },
]
description = "A collection of commonly used Python utilities."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["utils", "utilities"]

[project.urls]
"Homepage" = "https://github.com/mzaja/jacktrade"
"Bug Tracker" = "https://github.com/mzaja/jacktrade/issues"
